@@ -1,3 +1,8 @@
+2017-07-27  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/81502
+	* gcc.target/i386/vect-insert-1.c: New testcase.
+
 2017-07-27  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
 
 	PR target/81534
